--- a/package.json
+++ b/package.json
@@ -15,7 +15,17 @@
     "@ui-kitten/eva-icons": "^5.1.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-svg": "^13.5.0"
+    "react-native-svg": "^13.5.0",
+    "@react-navigation/bottom-tabs": "^6.3.3",
+    "@react-navigation/drawer": "^6.4.4",
+    "@react-navigation/material-top-tabs": "^6.2.3",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
+    "@react-navigation/stack": "^6.2.3",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.17.0",
+    "react-native-gesture-handler": "^2.6.0",
+    "react-native-reanimated": "^2.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
